--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "ninja-quiz",
+  "name": "ninja-todo",
   "version": "1.0.0",
   "description": "udemy course by net ninja",
   "main": "gulpfile.babel.js",
-  "repository": "git@github.com:YewTreeWeb/ninja-quiz.git",
+  "repository": "git@github.com:YewTreeWeb/ninja-todo.git",
   "author": "Mathew Teague <mathew.teague@yewtreeweb.co.uk>",
   "license": "MIT",
   "dependencies": {
     "airbnb-browser-shims": "^3.3.0",
+    "bootstrap": "^4.4.1",
     "bourbon": "^6.0.0",
-    "bulma": "^0.8.0",
     "codyhouse-framework": "^2.2.4",
     "include-media": "^1.4.9",
     "normalize.css": "^8.0.1",
