--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "imagemin-webp": "^5.1.0",
     "imagemin-zopfli": "^6.0.0",
     "merge-stream": "^2.0.0",
+    "multi-loader": "^0.1.0",
     "prettier": "^1.19.1",
     "read-yaml": "^1.1.0",
     "rucksack-css": "^1.0.2",
